# topalias

./: .all-contributorsrc  .coveragerc  .coveralls.yml  .deepsource.toml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PACKAGING.md  PKGBUILD  Pipfile  README.md  er.nameOBOB  fix.prompt.yml  nohup.out  package.json  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  topalias.sh  tox.ini  typos.toml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: misspell.yml  publish-docker.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
debian/: changelog  control  copyright  rules
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  readme.rst  requirements.txt  usage.rst
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: changelog.rst
github.com/meteoritt/: gentleman.html
tests/: __init__.py  test_topalias.py
topalias/: __init__.py  __main__.py  aliascore.py  cli copy 2.py  cli.py  cli2.py  cli310.py  cli313.py  exp.py  statistic.py
topalias/data/: .bash_history  .zsh_history
