[build-system]
requires = [
    "poetry>=1.0",
    "setuptools>=30.3.0",
    "wheel",
]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "topalias"
version = "2.0.20"
description = "Linux bash alias generator"
license = "GPL-3.0-or-later"

authors = ["Sergey Chudakov"]

readme = "README.md"

repository = "https://github.com/CSRedRat/topalias"

keywords = ["top", "bash", "zsh", "alias", "aliases", "linux", "python", "shell", "cli", "console", "terminal", "utility", "tool", "history", "sysadmin"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9"
Click = "^7.1"
setuptools = "^57.4.0"

[tool.poetry.dev-dependencies]
setuptools = "^54.0.0"
bump2version = "^1.0.1"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.4"
nitpick = "^0.25"

safety = "^1.9"

pytest = "^6.1"
pytest-cov = "^2.10"
pytest-randomly = "^3.4"
coverage = "^5.5"

sphinx = "^3.5"
sphinx-autodoc-typehints = "^1.11"

doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.7.0"

flake8 = "^3.9.0"
tox = "^3.24.5"
pylint = "^2.7.2"
black = "^20.8b1"
pre-commit = "^2.11.1"
isort = "^5.8"
#isort = "<5"

requests = "^2.25.1"
html5lib = "^1.1"
beautifulsoup4 = "^4.9.3"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["topalias", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "topalias"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
