[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "topalias"
version = "4.0.0"
description = "Linux bash alias generator"
license = "GPL-3.0-or-later"

authors = ["Sergey Chudakov"]

readme = "README.md"

repository = "https://github.com/CSRedRat/topalias"

keywords = ["top", "bash", "zsh", "alias", "aliases", "linux", "python", "shell", "cli", "console", "terminal", "utility", "tool", "history", "sysadmin"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
Click = "^8.0.0"
setuptools = "^65.5.1"
typing-extensions = ">=3.6,<4.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.4"
nitpick = "^0.25"

safety = "^3.5.2"

pytest = "^6.1"
pytest-cov = "^2.10"
pytest-randomly = "^3.4"
coverage = "^5.5"

sphinx = "^3.5"
sphinx-autodoc-typehints = "^1.11"

doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.7.0"

flake8 = "^3.9.0"
tox = "^3.23.0"
pylint = "^2.7.2"
black = "^22.3.0"
pre-commit = "^4.3.0"
isort = "^5.8"

requests = "^2.25.1"
html5lib = "^1.1"
beautifulsoup4 = "^4.9.3"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
